# embfetch-runtime

./: .gitignore  CODE_OF_CONDUCT.md  LICENSE  README.md
src/: sysinfo_runtime_common.c
src/include/: embfetch_config.h  embfetch_port.h  logo.h  runtime_sysinfo.h
src/runtime/dotnet/: sysinfo_dotnet_common.c
src/runtime/dotnet/dotnet-core/: sysinfo_dotnet_core.c
src/runtime/java/: sysinfo_java_common.c
src/runtime/java/openjdk/: sysinfo_openjdk.c
src/runtime/java/sample/: Embfetch.java  embfetch.jsh
src/runtime/python/: sysinfo_python_common.c
src/runtime/python/circuitpython/: sysinfo_circuitpython.c
src/runtime/python/cpython/: cpython_logo.h  pyproject.toml  setup.py  sysinfo_cpython.c
src/runtime/python/cpython/examples/: embfetch_cpython_compile.py
src/runtime/python/cpython/include/: logo.h
src/runtime/python/micropython/: micropython_logo.h  sysinfo_micropython.c
src/runtime/python/sample/: embfetch_cpython_sample.py
