[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "embfetch"
version = "0.1.0"
description = "Neofetch-style system info display for Python runtimes"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.8"

[project.scripts]
embfetch = "embfetch_sample:main"

[tool.setuptools]
py-modules = ["embfetch_sample"]

[tool.setuptools.ext-modules]
# C extension is defined in setup.py since pyproject.toml
# does not yet have a standard way to declare C extensions